# SoundFX-Framework

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  EXCEPTIONS.md  LICENSE  README.md  vcpkg.json
.github/workflows/: auto-clang-format.yml  build-release.yml  ci-build.yml
cmake/: plugin.h.in  version.rc.in
include/: Font_Awesome_6_Free_Solid_900_Edited.otf.h  PCH.h
src/: plugin.cpp
src/SoundFX/: CustomSoundDescriptor.cpp  CustomSoundDescriptor.h  EventHandlerManager.cpp  EventHandlerManager.h  JSONLoader.cpp  JSONLoader.h  Logger.cpp  Logger.h  Sound3DUtil.cpp  Sound3DUtil.h  SoundEvent.h  SoundUtil.cpp  SoundUtil.h  TaskScheduler.cpp  TaskScheduler.h  Utility.cpp  Utility.h
src/SoundFX/Config/: ConfigManager.cpp  ConfigManager.h
src/SoundFX/EventHandlers/: ArmorEventHandler.cpp  ArmorEventHandler.h  CellEventHandler.cpp  CellEventHandler.h  CombatEventHandler.cpp  CombatEventHandler.h  MiscItemEventHandler.cpp  MiscItemEventHandler.h  NpcInteractionEventHandler.cpp  NpcInteractionEventHandler.h  QuestEventHandler.cpp  QuestEventHandler.h  SpellEventHandler.cpp  SpellEventHandler.h  WeaponEventHandler.cpp  WeaponEventHandler.h
src/SoundFX/Events/: EventHandlerManager.cpp  EventHandlerManager.h
src/SoundFX/Events/EventHandlers/: ArmorEventHandler.cpp  ArmorEventHandler.h  CellEventHandler.cpp  CellEventHandler.h  CombatEventHandler.cpp  CombatEventHandler.h  MiscItemEventHandler.cpp  MiscItemEventHandler.h  NpcInteractionEventHandler.cpp  NpcInteractionEventHandler.h  QuestEventHandler.cpp  QuestEventHandler.h  SpellEventHandler.cpp  SpellEventHandler.h  WeaponEventHandler.cpp  WeaponEventHandler.h
src/SoundFX/Hooks/: BaseHook.h  HookManager.cpp  HookManager.h  InputEventHook.cpp  InputEventHook.h  RendererHook.cpp  RendererHook.h  VTableHook.cpp  VTableHook.h
src/SoundFX/ImGui/Core/: ImGuiManager.cpp  ImGuiManager.h  InputListener.cpp  InputListener.h  RendererHook.cpp  RendererHook.h
src/SoundFX/ImGui/Renderers/: RenderObject.cpp  RenderObject.h  SoundMarker.cpp  SoundMarker.h
src/SoundFX/ImGui/Settings/: DefaultSettings.h
src/SoundFX/ImGui/Settings/Base/: BaseSetting.h
src/SoundFX/ImGui/Settings/Types/Bool/: BoolCheckboxSetting.cpp  BoolCheckboxSetting.h  BoolSetting.cpp  BoolSetting.h
src/SoundFX/ImGui/Settings/Types/Color/: ColorSetting.cpp  ColorSetting.h
src/SoundFX/ImGui/Settings/Types/Float/: FloatInputSetting.cpp  FloatInputSetting.h  FloatSetting.cpp  FloatSetting.h  FloatSliderSetting.cpp  FloatSliderSetting.h
src/SoundFX/ImGui/Settings/Types/Int/: IntComboBoxSetting.cpp  IntComboBoxSetting.h  IntSetting.cpp  IntSetting.h  IntSliderSetting.cpp  IntSliderSetting.h
src/SoundFX/ImGui/Styles/: Theme.cpp  Theme.h
src/SoundFX/ImGui/UI/: LogViewer.cpp  LogViewer.h  MainWindow.cpp  MainWindow.h  SettingsUI.cpp  SettingsUI.h  SoundMarkerListWindow.cpp  SoundMarkerListWindow.h
src/SoundFX/Sound/: CustomSoundDescriptor.cpp  CustomSoundDescriptor.h  Sound3D.cpp  Sound3D.h  Sound3DUtil.cpp  Sound3DUtil.h  SoundManager.cpp  SoundManager.h  SoundUtil.cpp  SoundUtil.h
